test/ddc-spec/error/01-ErrorExp/41-CaseNoAlternatives/Main.ds

module Main where

foo = case 4 of {}
