test/ddc-spec/error/01-ErrorExp/41-CaseNoAlternatives/Main.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/41-CaseNoAlternatives/Main.ds:4:1
  Case expression does not have any alternatives.
